// Part of the Crubit project, under the Apache License v2.0 with LLVM
// Exceptions. See /LICENSE for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

edition = "2023";

package foo_service;

option java_multiple_files = true;

message FooRequest {
  string input = 1;
}

message FooResponse {
  string output = 1;
}

message FooRequestStats {
  int32 num_requests = 1;
}
